# warp2api

./: .env.example  .gitignore  README.md  ecosystem.config.cjs  openai_compat.py  pyproject.toml  server.py  start.bat  start.ps1  start.sh  stop.bat  stop.sh  test.bat  test.sh
.github/workflows/: ci.yml
Account Pro v3.0.9_extracted/: Python  QtCore  QtDBus  QtGui  QtNetwork  QtPrintSupport  QtQml  QtQmlModels  QtQuick  QtSvg  QtWebSockets  QtWidgets  app.icns  libcrypto.3.dylib  libncursesw.5.dylib  libssl.3.dylib
Account Pro v3.0.9_extracted/Python.framework/: Python
Account Pro v3.0.9_extracted/Python.framework/Versions/: Current
Account Pro v3.0.9_extracted/flask-3.1.0.dist-info/: RECORD
design-system/warp2api-admin/: MASTER.md
design-system/warp2api-admin/pages/: admin-tokens.md
docs/: architecture_refactor_plan.md  clean_architecture_scaffold.md  current_architecture.md  data_storage_architecture.md  src_migration_plan.md  token_pool_ui_plan.md
scripts/: import_warpmanagerpro_accounts.py  min_warp_demo.py  pm2_log_watchdog.sh  probe_remote_models.py  test_model_tags.py
src/warp2api/: __init__.py
src/warp2api/adapters/anthropic/: router.py
src/warp2api/adapters/common/: __init__.py  logging.py  schemas.py
src/warp2api/adapters/gemini/: router.py
src/warp2api/adapters/openai/: app.py  router.py
src/warp2api/api/: admin_auth.py  codec_controller.py  runtime.py  schemas.py
src/warp2api/api/routes/: admin_token_routes.py  auth_routes.py  bridge_routes.py  codec_routes.py  model_routes.py  openai_routes.py  warp_chat_routes.py  warp_send_routes.py  warp_token_routes.py  ws_routes.py
src/warp2api/app/: bridge.py  bridge_app.py  bridge_bootstrap.py  bridge_runtime.py  gateway_bootstrap.py  main.py  openai.py  openai_runtime.py
src/warp2api/application/services/: __init__.py  bridge_access.py  chat_gateway_service.py  chat_gateway_support.py  gateway_access.py  openai_protocol_service.py  token_lock_service.py  token_pool_service.py  token_refresh_service.py  token_rotation_service.py  token_runtime_service.py  warp_request_service.py
src/warp2api/domain/models/: __init__.py  model_catalog.py  token_account.py
src/warp2api/domain/protocols/: token_repository.py
src/warp2api/infrastructure/auth/: jwt_auth.py
src/warp2api/infrastructure/monitoring/: account_pool_monitor.py
src/warp2api/infrastructure/protobuf/: __init__.py  codec.py  minimal_request.py  runtime.py  utils.py
src/warp2api/infrastructure/providers/: warp_provider.py
src/warp2api/infrastructure/runtime/: session.py  stream_processor.py
src/warp2api/infrastructure/settings/: config.py  settings.py
src/warp2api/observability/: logging.py
src/warp2api/tools/: __init__.py  proto_sync.py
static/: admin-tokens.html  admin_tokens.html
static/js/: admin-tokens.js
tests/: conftest.py  test_admin_token_api.py  test_api_smoke.py  test_architecture_guard.py  test_data_storage_ssot.py  test_model_catalog.py  test_openai_state_isolation.py  test_protobuf_optimizations.py  test_protocol_compliance.py  test_src_layout.py  test_token_rotation_pool.py  test_warp_request_service.py
(+40 files in other folders)
