[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warp2api"
version = "0.1.0"
description = "Warp AI multi-protocol gateway"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "httpx[http2]",
    "protobuf",
    "grpcio-tools",
    "python-dotenv",
    "websockets>=15.0.1",
    "openai>=1.106.0",
    "cryptography>=45.0.0",
]

[project.scripts]
warp2api = "warp2api.app.main:main"
warp2api-gateway = "warp2api.app.openai:main"
warp2api-proto = "warp2api.tools.proto_sync:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["warp2api*"]

[tool.setuptools.package-data]
warp2api = ["proto/*.proto"]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
